--- a/src/index.css
+++ b/src/index.css
@@ -9,26 +9,35 @@ body {
 }
 .header{
   border-bottom: 1px solid gray;
-  display: grid;
+  display: flex;
   width: 100%;
   min-height: 4vw;
-  grid-template-columns: 6fr 5fr 2fr 1fr;
-  background: linear-gradient(rgb(250, 196, 189),rgb(247, 226, 195));
+  justify-content: space-between;
+  background: rgb(67, 129, 243);
 }
 .test-name{
-  margin-left: 1.5vw;
+  margin-left: 1vw;
   margin-top: 1vw;
   font-size: 1.5vw;
+  color: white;
 }
 .timer{
-  margin-left: 1.5vw;
-  margin-top: 1vw;
-  font-size: 1.5vw;
+  font-size: 1.8vw;
+  color: white;
+  background-color: rgb(25, 58, 209);
+  padding-top: .7vw;
+  padding-left: 1vw;
+  padding-right: 1vw;
 }
 .remain{
   margin-left: 2.7vw;
-  margin-top: .8vw;
   font-size: 1.5vw;
+  margin-right: 2vw;
+  color: azure;
+}
+.svgg{
+  margin-top: 0;
+  padding: 0;
 }
 circle {
   transition: stroke-dashoffset 0.35s;
@@ -41,16 +50,20 @@ circle {
 }
 .end{
   font-size: 1vw;
+  font-weight: 700;
   cursor: pointer;
-  margin-bottom: .5vw;
-  margin-top: .5vw;
-  margin-right: 1vw;
-  background-color: rgb(105, 115, 252);
+  margin-bottom: .7vw;
+  margin-top: .7vw;
+  margin-right: 1.2vw;
+  background-color: rgb(255, 112, 56);
   border: none;
+  border-radius: 5px;
+  padding-right: 10px;
+  padding-left: 10px;
   color: white;
 }
 .end:hover{
-  background-color: rgb(4, 66, 250);
+  background-color: rgb(250, 12, 4);
 }
 .footer{
     height: 3.5vw;
@@ -61,7 +74,7 @@ circle {
 .main{
   display: grid;
   grid-template-columns: 1fr 14fr;
-  height: 39.3vw;
+  height: 48.1vw;
 }
 .list{
   display: flex;
@@ -77,7 +90,7 @@ circle {
   min-height: 3.5vw;
   padding-top: .3vw;
   padding-bottom: .3vw;
-  outline: none;
+  outline: none !important;
   margin-left: 1vw;
   margin-right: 1vw;
   font-size: 2vw;
@@ -90,7 +103,7 @@ circle {
   color: rgb(5, 146, 36);
 }
 .ques{
-  width: 93.2vw;
+  width: 93.3vw;
   padding-right: 1vw;
   padding-bottom: 1vw;
   padding-left: 1vw;
@@ -121,7 +134,6 @@ circle {
 }
 .mcq{
   display: flex;
-  align-items: center;
   margin-top: 1vw;
   padding: .5vw;
   border-radius: 5px;
@@ -130,9 +142,6 @@ circle {
 .namein{
   margin-left: 10px;
   font-size: 1.2vw;
-}
-.radio{
-  align-self: flex-start;
 }
 .radio {
   -webkit-appearance: none;
@@ -148,18 +157,18 @@ circle {
   transition: 0.1s all linear;
   min-width: 1.2vw;
   position: relative;
-  /*top: 4px;*/
+  top: 4px;
 }
 
 .radio:checked {
   border: 4px solid rgb(44, 115, 223);
 }
 .circut{
-  background: linear-gradient( to right,rgb(22, 161, 241),rgb(19, 53, 206)) !important;
+  background: linear-gradient( to right,rgb(25, 149, 221),rgb(19, 53, 206)) !important;
   color: white !important;
 }
 .circut1{
-  background: linear-gradient( to right,rgb(95, 99, 102),rgb(160, 161, 168)) !important;
+  background: linear-gradient( to right,rgb(131, 134, 136),rgb(83, 83, 87)) !important;
   color: white !important;
 }
 .hide-results{
